# codebase-knowledge-extractor

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: sakila-openai.toml
output/: spring-rest-sakila-openai-analysis.json
src/codebase_analyzer/: __init__.py  cache.py  cli.py  config.py  discovery.py  java_parser.py  llm.py  models.py  pipeline.py  prompts.py  repository.py  token_budget.py
tests/: test_cache.py  test_cli.py  test_config.py  test_discovery.py  test_java_parser.py  test_llm.py  test_pipeline.py  test_token_budget.py
tests/fixtures/: SampleController.java
